# Microcontrollers

Opdracht7UART/: CMakeLists.txt
Opdracht7UART/main/: idf_component.yml
Opdracht8²C/: CMakeLists.txt
Opdracht8²C/main/: idf_component.yml
lichtsensorgrafiek/: CMakeLists.txt  server.py
lichtsensorgrafiek/main/: CMakeLists.txt  idf_component.yml  main.c
lichtsensorgrafiek/web/: index.html
lightsensorproject/: CMakeLists.txt
lightsensorproject/components/myADC/: CMakeLists.txt  myADC.c
lightsensorproject/components/myADC/include/: myADC.h
lightsensorproject/main/: CMakeLists.txt  index.html  main.c  webserver.c  webserver.h  wifi.c
opdracht2/: CMakeLists.txt
opdracht2/components/myGPIO/: CMakeLists.txt  myGPIO.c
opdracht2/components/myGPIO/include/: myGPIO.h
opdracht3/: CMakeLists.txt
opdracht3/components/myADC/: CMakeLists.txt  myADC.c
opdracht3/components/myADC/include/: myADC.h
opdracht4/: CMakeLists.txt
opdracht4/components/myDAC/: CMakeLists.txt  myDAC.c
opdracht4/components/myDAC/include/: myDAC.h
opdracht5/: CMakeLists.txt
opdracht5/components/myLocker/: CMakeLists.txt  myLocker.c
opdracht6/: CMakeLists.txt
opdracht6/main/: idf_component.yml
opdrachtopdrachtopdracht/: CMakeLists.txt
opdrachtopdrachtopdracht/main/: idf_component.yml  main.c
test2teststst/: CMakeLists.txt
test2teststst/components/testst/: CMakeLists.txt  testst.c
testy zesty westy/: CMakeLists.txt
